<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">骑来骑去</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start">骑来骑去</string>
    <string name="title_activity_person">PersonActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_riding">RidingActivity</string>
    <string name="title_activity_collect">CollectActivity</string>
    <string name="title_activity_set">SetActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_forget">ForgetActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_opinion">OpinionActivity</string>
    <string name="text_startactivity_text">您的贴身骑行管家</string>
    <string name="text_loginactivity_hello">你好，骑友!</string>
    <string name="text_loginactivity_username">帐号:</string>
    <string name="text_loginactivity_password">密码:</string>
    <string name="button_loginactivity_login">登录</string>
    <string name="text_loginactivity_forget">忘记密码?</string>
    <string name="button_loginactivity_register">手机号注册</string>
    <string name="button_loginactivity_visitor">返回</string>
    <string name="back">返回</string>
    <string name="button_send">发送</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="text_forgetactivity_title">忘记密码</string>
    <string name="edit_forgrtactivity_phone">请输入手机号码</string>
    <string name="edit_forgrtactivity_send">发送验证码</string>
    <string name="edit_forgrtactivity_code">请填写验证码</string>
    <string name="edit_forgrtactivity_resend">重新发送(60)</string>
    <string name="text_forgetactivity_confirm">确认密码</string>
    <string name="text_forgetactivity_newpass">请设置新密码</string>
    <string name="text_personactivity_title">个人中心</string>
    <string name="text_registerActivity_title">手机号注册</string>
    <string name="text_personactivity_nick">昵称</string>
    <string name="text_personactivity_sex">性别</string>
    <string name="text_personactivity_point">积分</string>
    <string name="text_personactivity_fans">关注Ta的</string>
    <string name="text_personactivity_care">Ta关注的</string>
    <string name="text_personactivity_introduce">个人介绍</string>
    <string name="text_messageactivity_title">消息中心</string>
    <string name="text_messageList_messagetype">消息种类</string>
    <string name="text_messageList_message">测试消息.................测试消息测试消息测试消息测试消息测试消息测试消息</string>
    <string name="text_personactivity_message">消息中心</string>
    <string name="text_personactivity_riding">骑游记</string>
    <string name="text_personactivity_collect">收藏</string>
    <string name="text_personactivity_activity_center">活动中心</string>
    <string name="text_personactivity_set">设置</string>
    <string name="text_collectactivity_title">我的收藏</string>
    <string name="text_collectList_title">骑游记标题</string>
    <string name="text_setactivity_title">软件设置</string>
    <string name="text_setactivity_baseset">基础设置</string>
    <string name="text_setactivity_demo">XXXX功能</string>
    <string name="text_setactivity_other">其他</string>
    <string name="text_ridingactivity_title">我的骑游记</string>
    <string name="button_ridingactivity_compile">编辑</string>
    <string name="text_mainlist_title">骑行大西北</string>
    <string name="text_mainactivity_title">骑来骑去</string>
    <string name="title_activity_riding_details">RidingDetailsActivity</string>
    <string name="title_activity_release">ReleaseActivity</string>
    <string name="text_ridingdetails_title">无限风光在于骑行</string>
    <string name="text_ridingdetails_publish">发表于:</string>
    <string name="text_ridingdetails_time">2015年06月08日</string>
    <string name="text_releaseactivity_title">发布骑游记</string>
    <string name="text_releaseactivity_location">所在位置</string>
    <string name="text_releaseactivity_addphoto">继续添加照片</string>
    <string name="edit_releaseactivity_title">输入游记标题</string>
    <string name="edit_releaseactivity_content">说说你的故事吧！！</string>
    <string name="edit_releaseactivity_legend">添加图注</string>
    <string name="button_releaseactivity_browse">预览</string>
    <string name="button_releaseactivity_publish">发表</string>
    <string name="text_ridingdetails_describe">文字描述</string>
    <string name="title_activity_personal_data">PersonalDataActivity</string>
    <string name="text_personaldataactivity_title">个人资料修改</string>
    <string name="text_personaldataactivity_clickchange">点击更换</string>
    <string name="text_personactivity_username">帐号</string>
    <string name="text_personaldataactivity_bind">绑定手机号</string>
    <string name="text_personaldataactivity_address">地区</string>
    <string name="text_personaldataactivity_sex">性别</string>
    <string name="text_personaldataactivity_password">修改密码</string>
    <string name="text_personaldataactivity_editing">个性签名编辑</string>
    <string name="text_personaldataactivity_username">13129907055</string>
    <string name="text_personaldataactivity_nick">独步天涯</string>
    <string name="text_personaldataactivity_confirm">保存</string>
    <string name="title_activity_comment_message">CommentMessageActivity</string>
    <string name="title_activity_my_message">MyMessageActivity</string>
    <string name="title_activity_native_image">NativeImageActivity</string>
    <string name="text_nativeimageactivity_confirm">确定</string>
    <string name="title_activity_discuss">DiscussActivity</string>
    <string name="text_discussactivity_title">评论</string>
    <string name="text_mymessageactivity_title">我的消息</string>
    <string name="text_commentmessageactivity_title">评论消息</string>
    <string name="txt_personalfragment_signature">无论走到哪里，都不要丢了自行车</string>
    <string name="txt_jifen">积分</string>
    <string name="txt_fensi">粉丝</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="txt_my_attention">我的关注</string>
    <string name="txt_commentmessageactivity_return_title">独步天涯评论了你的骑游记《大西北骑行》</string>
    <string name="txt_commentmessageactivity_return_content">里面的照片很美啊，请问你是骑车的时候带了单反吗？大神的骑游记值得期待</string>
    <string name="edt_commentmessageactivity_my_return">回复一下</string>
    <string name="txt_commentmessageactivity_return_num">0/50</string>
    <string name="txt_mymessageactivity_system_message">系统消息</string>
    <string name="txt_mymessageactivity_content">独步天涯评论了你的骑游记</string>
    <string name="button_discussactivity_discuss">评论</string>
    <string name="txt_discussactivity_discusspeo">小伙子的评论</string>
    <string name="txt_discussactivity_content">玩的挺远的，感觉还可以吧，下次一起吧!啊实打实大</string>
    <string name="edit__discussactivity_content">说几句吧</string>
    <string name="edt_loginActivity_username">请输入手机号</string>
    <string name="edt_loginActivity_password">请输入密码</string>
    <string name="txt_loginactivity_sanfang">第三方登录平台</string>
    <string name="edittext_personaldataactivity_signature">天下没有我到不了的地方，有自行车，哪里都是天空</string>
    <string name="txet_personaldataactivity_district">余杭区</string>
    <string name="text_personaldataactivity_city">杭州市</string>
    <string name="text_personaldataactivity_province">浙江省</string>
    <string name="text_personaldataactivity_signature">0/50</string>
    <string name="text_ridingdetailsactivity_title">骑游记</string>
    <string name="text_ridingdatilslist_ridingcontent">\u3000每一处都会有美好的风景，从来没有想过离开风景的心里会装着一片天空，那里，才是我要去的地方！带着我的自行车，开往下一站！</string>
    <string name="text_ridinglist_number">243次浏览</string>
    <string name="text_personactivity_careabit">关注一下</string>
    <string name="text_opinionactivity_title">反馈建议</string>
    <string name="edittext_opintionactivity_promiss">我们将确保不泄露你的个人信息！</string>
    <string name="edittext_opintionactivity_opinion">您的建议是我们不断完善的源泉！</string>
    <string name="text_opinionactivity_email">您的邮箱</string>
    <string name="text_opintion_send">发送</string>
    <string name="returnssss">返回</string>
    <string name="title_activity_mainfgfg">haha</string>
    <string name="text_modifipass_title">修改密码</string>
    <string name="text_systemmessageactivity_title">系统消息</string>
    <string name="text_fragment_num">99</string>
    <string name="txt__releaseactivity_title_num">0/10</string>
    <string name="text_dialog_box_title">确定要删除这个故事吗？</string>
    <string name="text_quxiao">取消</string>
    <string name="text_introduce_title">软件介绍</string>
    <string name="copyright">Copyright 2015-2016 Cycing intel. All Right Reserved</string>
    <string name="versionCode">10</string>
    <string name="versionName">2.0.0</string>
    <string name="txt_nativeactivity_num">0个已选择</string>
    <string name="text_friendActivity_title">好友</string>
    <string name="title_activity_bind_phone">BindPhoneActivity</string>
    <string name="text_bindphoneactivity_title">绑定手机</string>
    <string name="diqu">地区</string>
    <string name="text_personactivity_signature">这个人很懒，什么也没留下!</string>
    <string name="text_personactivity_introduction">个人介绍</string>
    <string name="search_qyj">搜索骑游记</string>
    <string name="cancel">取消</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="voice">[语音]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="voice_call">[语音通话]</string>
    <string name="text_activitydetailsactivity_title">活动详情</string>
    <string name="title_activity_action_center">ActionCenterActivity</string>
    <string name="text_actioncenteractivity_title">活动中心</string>
    <string name="text_riderAuthenticationActivity_title">陪骑士认证</string>
    <string name="title_activity_activity_apply">ActivityApplyActivity</string>
    <string name="title_activityactivity_title">群成员查看</string>
    <string name="text_activityactivity_cancel">取消报名</string>
    <string name="text_appendActivity_title">已报名查看</string>
    <string name="text_groupActivity_title">成员</string>
    <string name="text_releaseactivity_save">保存草稿</string>
    <string name="text_mainactivity_traves">骑游记</string>
    <string name="text_mainactivity_active">活动</string>
    <string name="basic_action_1">删除</string>
    <string name="basic_action_2">Action_2</string>
    <string name="str_orange">#fe7b27</string>
    <string name="news_content">消息内容</string>
    <string name="name_chat">聊天名称</string>
    <string name="text_releaseactivity_save">保存草稿</string>
    <string name="text_ChatActivity_title">聊天</string>
    <string name="text_personactivity_my">写点什么东西描述下吧！！！</string>
    <string name="text_personactivity_personal_letter">私    信</string>
    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="weibosdk_demo_token_to_string_format">Token：%1$s \nRefresh Token：%2$s \nexpires_in：%3$s</string>
    <string name="weibosdk_demo_token_to_string_format_1">Token：%1$s \n有效期：%2$s</string>
    <string name="weibosdk_demo_token_has_existed">Token 仍在有效期内，无需再次登录。</string>
    
    
    
            <string name="listview_header_hint_normal">下拉刷新</string>
<string name="listview_header_hint_release">释放立即刷新</string>
<string name="listview_loading">加载更多...</string>
<string name="nomore_loading">没有更多数据记录</string>
<string name="refreshing">加载跟多...</string>

</resources>