<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="#ffffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#6dbfed" >

        <LinearLayout
            android:id="@+id/layout_commentmessageactivity_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/return_innavigationbar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/back"
                android:textColor="#ffffff"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center|right"
            android:text="@string/text_commentmessageactivity_title"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RelativeLayout>
    <LinearLayout 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content" 
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
            <TextView
            android:id="@+id/txt_commentmessageactivity_return_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="独步天涯"
            android:textColor="#6dbfed"
            android:textSize="14sp" />
             <TextView
            android:id="@+id/txt_commentmessageactivity_return_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="评论了你的骑游记"
            android:textSize="14sp" />
            <TextView
            android:id="@+id/txt_commentmessageactivity_return_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="《》"
            android:textColor="#6dbfed"
            android:textSize="14sp" />
            <TextView
            android:id="@+id/txt_commentmessageactivity_return_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_commentmessageactivity_return_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/txt_commentmessageactivity_return_content"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="#f7f7f7"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edt_commentmessageactivity_my_return"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="top"
            android:textColor="#9d9d9e"
            android:hint="@string/edt_commentmessageactivity_my_return"
            android:maxLength="50"
            android:textSize="14sp" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/txt_commentmessageactivity_return_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/txt_commentmessageactivity_return_num" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_commentmessageactivity_affirm"
        android:layout_width="265dp"
        android:layout_height="44dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/switch_rounded_button"
        android:text="@string/text_nativeimageactivity_confirm"
        android:textColor="#ffffff" />

</LinearLayout>