<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#6dbfed" >

        <LinearLayout
            android:id="@+id/layout_discussactivity_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/return_innavigationbar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/back"
                android:textColor="#ffffff"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center|right"
            android:text="@string/text_discussactivity_title"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#ffffff" >

        <com.qizhi.qilaiqiqu.utils.RefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipe_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <ListView
            android:id="@+id/list_discussactivity_discuss"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null" >
        </ListView>
        </com.qizhi.qilaiqiqu.utils.RefreshLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="#f5f5f5"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edt__discussactivity_content"
            android:layout_width="0dp"
            android:layout_height="39dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:layout_weight="11"
            android:background="@drawable/bg_edittext"
            android:ems="10"
            android:hint="@string/edit__discussactivity_content"
            android:paddingLeft="5dp" />

        <Button
            android:id="@+id/btn_discussactivity_discuss"
            android:layout_width="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_height="35dp"
            android:layout_marginRight="10dp"
            android:layout_weight="2"
            android:background="@drawable/switch_rounded_discussactivity_button"
            android:text="@string/button_discussactivity_discuss"
            android:textColor="#ffffff" />
    </LinearLayout>

</LinearLayout>